# gl-matrix-wasm

./: .gitattributes  .gitignore  Benchmark.md  Cargo.toml  LICENSE  README.md  index.html  karma.config.js  package.json  server.dev.js  tsconfig.json  tslint.json  tslintConfig.js  wasm-opt.js  wast2wasm.js  webpack.dev.config.js  webpack.pd.config.js
convert/: convert.js  converter.js
demo/: App.tsx  base.scss  compare  index.html  index.tsx  testBenchmark.ts  testRealworld.ts  tests.ts  utils.ts
demo/assets/: matrix.wasm
spec/: mat2-spec.ts  mat2d-spec.ts  mat3-spec.ts  mat4-spec.ts  quat-spec.ts  quat2-spec.ts  spec-helper.js  spec-helper.ts  vec2-spec.ts  vec3-spec.ts  vec4-spec.js  vec4-spec.ts
src/: common.rs  lib.rs  matrix2.rs  matrix2d.rs  matrix3.rs  matrix4.rs  quaternion.rs  quaternion2.rs  utils.rs  vector2.rs  vector3.rs  vector4.rs
trans/: trans.js
